Fixed bug making cols overlap at 1024px

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ body
 
 .img-placeholder
 {
-	width:300px;
+	width:100%;
 	height:230px;
 	overflow:hidden;
 	display:block;
